--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ body{
     color: #0074D9;
     font-size: 2.2rem;
     font-weight: 600;
+    margin-bottom: 1.5rem;
 }
 .homeParagraph{
     color: #334155;
